--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
         <div class="card">
           <div class="card-image">
             <figure class="image">
-              <img src="profile_pic.jpg">
+              <img src="pictures/profile_pic.jpg">
             </figure>
           </div>
         </div>
@@ -325,13 +325,13 @@
                 <!-- Running Book -->
                 <div class="card">
                     <header class="card-header">
-                        <a class="card-header-title"  href="runnerHome.html">
+                        <a class="card-header-title"  href="runningbook/runnerHome.html">
                         <span>Running Book</span>
                         </a>
                     </header>
                     <div class="card-content">
                         <figure class="image is-square">
-                            <img src="RunningBookScreenshot.PNG">
+                            <img src="pictures/RunningBookScreenshot.PNG">
                         </figure>
                     </div>
                 </div>
