--- a/running_book/runnerLogin.html
+++ b/running_book/runnerLogin.html
@@ -4,8 +4,8 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Running Book</title>
-        <link rel="icon" type="image/png" href="shoe_icon2.png" sizes="32x32">
-        <link rel="stylesheet" href="package/css/bulma.css">
+        <link rel="icon" type="image/png" href="pictures/shoe_icon2.png" sizes="32x32">
+        <link rel="stylesheet" href="bulma.css">
     </header>
 
     <body class="has-navbar-fixed-top">
@@ -14,7 +14,7 @@
         <nav id="navbar" role="navigation" class="bd-navbar navbar has-shadow has-background-primary is-bold is-fixed-top is-spaced">
             <div class="navbar-menu">
                 <div class="navbar-brand">
-                <a class="navbar-item" href="runnerHome.html">
+                <a class="navbar-item" href="running_book/runnerHome.html">
                     <p class="title is-family-sans-serif">Running Book</p>
                 </a>
                 </div>
@@ -68,7 +68,7 @@
         <footer class="footer">
             <div class="content has-text-centered">
               <p>
-                <strong>Running Book</strong> by <a href="aboutMe.html">Colin Monaghan</a>.
+                <strong>Running Book</strong> by <a href="index.html">Colin Monaghan</a>.
               </p>
             </div>
         </footer>
