--- a/running_book/runnerHome.html
+++ b/running_book/runnerHome.html
@@ -4,8 +4,8 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Running Book</title>
-        <link rel="icon" type="image/png" href="pictures/shoe_icon2.png" sizes="32x32">
-        <link rel="stylesheet" href="bulma.css">
+        <link rel="icon" type="image/png" href="../pictures/shoe_icon2.png" sizes="32x32">
+        <link rel="stylesheet" href="../bulma.css">
     </header>
 
     <body class="has-navbar-fixed-top">
@@ -14,7 +14,7 @@
         <nav id="navbar" role="navigation" class="bd-navbar navbar has-shadow has-background-primary is-bold is-fixed-top is-spaced">
             <div class="navbar-menu">
                 <div class="navbar-brand">
-                <a class="navbar-item" href="running_book/runnerHome.html">
+                <a class="navbar-item" href="runnerHome.html">
                     <p class="title is-family-sans-serif">Running Book</p>
                 </a>
                 </div>
@@ -48,10 +48,10 @@
 
                         <div class="navbar-item buttons " > 
                             
-                                <a class="button is-link" href="running_book/runnerSignUp.html">
+                                <a class="button is-link" href="runnerSignUp.html">
                                     <strong>Sign up</strong>
                                 </a>
-                                <a class="button is-light" href="running_book/runnerLogin.html">Log in</a>
+                                <a class="button is-light" href="runnerLogin.html">Log in</a>
                             
                         </div>
                     </div>
@@ -75,7 +75,7 @@
                                     <div class='card equal-height has-background-none has-shadow-none'>
                                       <div class='card-content is-flex is-horizontal-center'>
                                         <figure class="image is-128x128 m-0">
-                                            <img class=" is-rounded" src="pictures/profile_pic.jpg">
+                                            <img class=" is-rounded" src="../pictures/profile_pic.jpg">
                                         </figure>
                                       </div>
                                     </div>
@@ -110,7 +110,7 @@
 
                         <article class="panel-block">
                             <p class="subtitle">Last Activity</p>
-                            <a href="running_book/runnerPost.html"><p>Afternoon Run</p></a>
+                            <a href="runnerPost.html"><p>Afternoon Run</p></a>
 
                         </article>
 
@@ -132,25 +132,25 @@
                         </div>
                         <a class="panel-block">
                             <spans class="image is-32x32 mr-2">
-                                <img class=" is-rounded" src="pictures/profile_pic.jpg">
+                                <img class=" is-rounded" src="../pictures/profile_pic.jpg">
                             </spans>
                             Friend 1
                         </a>
                         <a class="panel-block">
                             <spans class="image is-32x32 mr-2">
-                                <img class=" is-rounded" src="pictures/profile_pic.jpg">
+                                <img class=" is-rounded" src="../pictures/profile_pic.jpg">
                             </spans>
                             Friend 2
                         </a>
                         <a class="panel-block">
                             <spans class="image is-32x32 mr-2">
-                                <img class=" is-rounded" src="pictures/profile_pic.jpg">
+                                <img class=" is-rounded" src="../pictures/profile_pic.jpg">
                             </spans>
                             Friend 3
                         </a>
                         <a class="panel-block">
                             <spans class="image is-32x32 mr-2">
-                                <img class=" is-rounded" src="pictures/profile_pic.jpg">
+                                <img class=" is-rounded" src="../pictures/profile_pic.jpg">
                             </spans>
                             Friend 4
                         </a>
@@ -180,7 +180,7 @@
                                         <div class="level-left">
                                             <div class="level-item">
                                                 <figure class="image is-64x64 mx-3">
-                                                    <img class="is-rounded" src="pictures/profile_pic.jpg">
+                                                    <img class="is-rounded" src="../pictures/profile_pic.jpg">
                                                 </figure>
                                             </div>
                                         </div>
@@ -195,7 +195,7 @@
                                     <div class="level">
                                         <div class="level-left">
                                             <div class="level-item">
-                                                <a href="running_book/runnerPost.html"><h4 class="header is-size-3-desktop">Afternoon Run with the family</h4></a>
+                                                <a href="runnerPost.html"><h4 class="header is-size-3-desktop">Afternoon Run with the family</h4></a>
                                             </div>
                                         </div>
                                         <div class="level-right">
@@ -261,7 +261,7 @@
                             <article class="media has-background-light p-2">
                                     <!--Profile Picture-->
                                     <figure class="image is-64x64">
-                                        <img class=" is-rounded" src="pictures/profile_pic.jpg">
+                                        <img class=" is-rounded" src="../pictures/profile_pic.jpg">
                                     </figure>
                                     <!--Activity Content-->
                                     <div class="media-content">
@@ -307,7 +307,7 @@
                             <article class="media has-background-light p-2">
                                     <!--Profile Picture-->
                                     <figure class="image is-64x64">
-                                        <img class=" is-rounded" src="pictures/profile_pic.jpg">
+                                        <img class=" is-rounded" src="../pictures/profile_pic.jpg">
                                     </figure>
                                     <!--Activity Content-->
                                     <div class="media-content">
@@ -358,7 +358,7 @@
         <footer class="footer">
             <div class="content has-text-centered">
               <p>
-                <strong>Running Book</strong> by <a href="index.html">Colin Monaghan</a>.
+                <strong>Running Book</strong> by <a href="../index.html">Colin Monaghan</a>.
               </p>
             </div>
         </footer>
