--- a/running_book/runnerPost.html
+++ b/running_book/runnerPost.html
@@ -4,8 +4,8 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Running Book</title>
-        <link rel="icon" type="image/png" href="shoe_icon2.png" sizes="32x32">
-        <link rel="stylesheet" href="package/css/bulma.css">
+        <link rel="icon" type="image/png" href="../pictures/shoe_icon2.png" sizes="32x32">
+        <link rel="stylesheet" href="../bulma.css">
     </header>
 
     <body class="has-navbar-fixed-top">
@@ -93,7 +93,7 @@
                                 <div class="level-left">
                                     <!--Profile Picture-->
                                     <figure class="image is-64x64">
-                                        <img class=" is-rounded" src="pictures/profile_pic.jpg">
+                                        <img class=" is-rounded" src="../pictures/profile_pic.jpg">
                                     </figure>   
                                     <h3 class="title mb-0 mx-2">Afternoon Run </h3>
                                     <h6>3h</h6>
@@ -139,7 +139,7 @@
                                 <div class="columns m-1">
                                     <div class="coulmn is-2">
                                         <figure class="image is-32x32">
-                                                <img class=" is-rounded" src="pictures/profile_pic.jpg">
+                                                <img class=" is-rounded" src="../pictures/profile_pic.jpg">
                                         </figure>
                                     </div>
                                     <div class="column is-7">
@@ -157,7 +157,7 @@
                                                 <div class="columns is-7">
                                                     <div class="column is-2 mx-1">
                                                         <figure class="image is-32x32">
-                                                            <img class=" is-rounded" src="pictures/profile_pic.jpg">
+                                                            <img class=" is-rounded" src="../pictures/profile_pic.jpg">
                                                         </figure> 
                                                     </div>
                                                     <div class="column mx-1 mb-0">
@@ -188,7 +188,7 @@
                                                 <div class="columns is-7">
                                                     <div class="column is-2 mx-1">
                                                         <figure class="image is-32x32">
-                                                            <img class=" is-rounded" src="pictures/profile_pic.jpg">
+                                                            <img class=" is-rounded" src="../pictures/profile_pic.jpg">
                                                         </figure> 
                                                     </div>
                                                     <div class="column mx-1 mb-0">
@@ -225,7 +225,7 @@
         <footer class="footer">
             <div class="content has-text-centered">
               <p>
-                <strong>Running Book</strong> by <a href="aboutMe.html">Colin Monaghan</a>.
+                <strong>Running Book</strong> by <a href="../index.html">Colin Monaghan</a>.
               </p>
             </div>
         </footer>
