--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
             <h3 class="title is-2">Resume</h3>
             <h4 class="subtitle is-5">More about my past</h4>
 
-            <form method="get" action="Colin Monaghan Resume 11_26_2020.pdf">
+            <form method="get" action="personal_website/Colin Monaghan Resume 11_26_2020.pdf">
                 <button class="button is-link is-medium" type="submit">
                     <span class="icon">
                         <i class="fas fa-file-alt"></i>
@@ -309,11 +309,11 @@
                         <span>GitHub</span>
                     </a>
                     </header>
-                    <div class="card-content">
-                    <figure class="image is-square">
-                        <img src="https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png">
-                    </figure>
-                    </div>
+                    <a class="card-content"  href="https://github.com/cleemonaghan?tab=repositories">
+                      <figure class="image is-square">
+                          <img src="https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png">
+                      </figure>
+                    </a>
                 </div>
             </div>
             <div class="column is-4">
@@ -324,11 +324,11 @@
                         <span>Running Book</span>
                         </a>
                     </header>
-                    <div class="card-content">
+                    <a class="card-content"  href="running_book/runnerHome.html">
                         <figure class="image is-square">
                             <img src="pictures/RunningBookScreenshot.PNG">
                         </figure>
-                    </div>
+                    </a>
                 </div>
             </div>
           </div>
