--- a/personal_website/assignments.html
+++ b/personal_website/assignments.html
@@ -199,7 +199,155 @@
             <!-- Heading -->
             <div class="section-heading">
                 <h3 class="title is-2">Week 2</h3>
-                <h4 class="subtitle is-3"></h4>
+                <h4 class="subtitle is-3">Introducing Python</h4>
+            </div>
+            <div class="container">
+                <table class="table is-bordered is-striped is-narrow">
+                    <thead>
+                        <tr>
+                            <td>#</td>
+                            <td>Assignment</td>
+                            <td>Link</td>
+                            <td>Time</td>
+                            <td>Difficulty (1-5)</td>
+                            <td>Usefulness (1-5)</td>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>2.1*</td>
+                            <td>Watch first 7 tutorial videos (as needed)</td>
+                            <td class="empty">N/A</td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                        </tr>
+                        <tr>
+                            <td>2.2</td>
+                            <td>Watch tutorial video 2-8 (generating a simple website with Python)</td>
+                            <td class="empty">N/A</td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                        </tr>
+                        <tr>
+                            <td>2.3</td>
+                            <td>fizzbuzz</td>
+                            <td></td>
+                            <td>.25 hours</td>
+                            <td>1</td>
+                            <td>3</td>
+                        </tr>
+                        <tr>
+                            <td>2.4</td>
+                            <td><code>primes</code></td>
+                            <td></td>
+                            <td>.5 hours</td>
+                            <td>3</td>
+                            <td>4</td>
+                        </tr>
+                        <tr>
+                            <td>2.5</td>
+                            <td><code>prime_factorization</code> function</td>
+                            <td></td>
+                            <td>.75 hours</td>
+                            <td>3</td>
+                            <td>4</td>
+                        </tr>
+                        <tr>
+                            <td>2.6</td>
+                            <td><code>my_sort</code> function</td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                        </tr>
+                        <tr>
+                            <td>2.7</td>
+                            <td>encrypt and decrypt a text file</td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                        </tr>
+                        <tr>
+                            <td>2.8</td>
+                            <td>Unscramble English words</td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                        </tr>
+                        <tr>
+                            <td>2.9</td>
+                            <td>Choose your own adventure game</td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                        </tr>
+                        <tr>
+                            <td>2.10*</td>
+                            <td>Web-based choose your own adventure game</td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                        </tr>
+                        <tr>
+                            <td>2.11*</td>
+                            <td>Evaluate arithmetic</td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                        </tr>
+                        <tr>
+                            <td>2.12*</td>
+                            <td>Sudoku solver</td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                        </tr>
+                        <tr>
+                            <td>2.13*</td>
+                            <td>make change with US coins</td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                        </tr>
+                        <tr>
+                            <td>2.14*</td>
+                            <td>Build clickable prototype of your own app, using sample data as in tutorial 2-8.</td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                        </tr>
+                        <tr>
+                            <td>2.A</td>
+                            <td>What did you like this week?</td>
+                            <td colspan="4"></td>
+                        </tr>
+                        <tr>
+                            <td>2.B</td>
+                            <td>What didn't you like this week?</td>
+                            <td colspan="4"></td>
+                        </tr>
+                        <tr>
+                            <td>2.C</td>
+                            <td>How can we improve the material from this week?</td>
+                            <td colspan="4"></td>
+                        </tr>
+                        <tr>
+                            <td>2.D*</td>
+                            <td>Show us anything else you coded up this week!</td>
+                            <td colspan="4"></td>
+                        </tr>
+                    </tbody>
+                </table>
             </div>
         </section>
 
