Updated Assignments Page

--- a/personal_website/assignments.html
+++ b/personal_website/assignments.html
@@ -218,22 +218,22 @@
                             <td>2.1*</td>
                             <td>Watch first 7 tutorial videos (as needed)</td>
                             <td class="empty">N/A</td>
-                            <td></td>
-                            <td></td>
-                            <td></td>
+                            <td>1.25 hours</td>
+                            <td>3</td>
+                            <td>3</td>
                         </tr>
                         <tr>
                             <td>2.2</td>
                             <td>Watch tutorial video 2-8 (generating a simple website with Python)</td>
                             <td class="empty">N/A</td>
-                            <td></td>
-                            <td></td>
-                            <td></td>
+                            <td>.75 hours</td>
+                            <td>3</td>
+                            <td>3</td>
                         </tr>
                         <tr>
                             <td>2.3</td>
                             <td>fizzbuzz</td>
-                            <td></td>
+                            <td><a href="../python/fizzbuzz.py">link</a></td>
                             <td>.25 hours</td>
                             <td>1</td>
                             <td>3</td>
@@ -241,7 +241,7 @@
                         <tr>
                             <td>2.4</td>
                             <td><code>primes</code></td>
-                            <td></td>
+                            <td><a href="../python/functions.py">link</a></td>
                             <td>.5 hours</td>
                             <td>3</td>
                             <td>4</td>
@@ -249,7 +249,7 @@
                         <tr>
                             <td>2.5</td>
                             <td><code>prime_factorization</code> function</td>
-                            <td></td>
+                            <td><a href="../python/functions.py">link</a></td>
                             <td>.75 hours</td>
                             <td>3</td>
                             <td>4</td>
@@ -257,34 +257,34 @@
                         <tr>
                             <td>2.6</td>
                             <td><code>my_sort</code> function</td>
-                            <td></td>
-                            <td></td>
-                            <td></td>
-                            <td></td>
+                            <td><a href="../python/functions.py">link</a></td>
+                            <td>1 hour</td>
+                            <td>3</td>
+                            <td>4</td>
                         </tr>
                         <tr>
                             <td>2.7</td>
                             <td>encrypt and decrypt a text file</td>
-                            <td></td>
-                            <td></td>
-                            <td></td>
-                            <td></td>
+                            <td><a href="../python/functions.py">link</a></td>
+                            <td>1.25 hours</td>
+                            <td>4</td>
+                            <td>5</td>
                         </tr>
                         <tr>
                             <td>2.8</td>
                             <td>Unscramble English words</td>
-                            <td></td>
-                            <td></td>
-                            <td></td>
-                            <td></td>
+                            <td><a href="../python/functions.py">link</a></td>
+                            <td>1 hour</td>
+                            <td>4</td>
+                            <td>4</td>
                         </tr>
                         <tr>
                             <td>2.9</td>
                             <td>Choose your own adventure game</td>
-                            <td></td>
-                            <td></td>
-                            <td></td>
-                            <td></td>
+                            <td><a href="../python/game.py">link</a></td>
+                            <td>1 hour</td>
+                            <td>2</td>
+                            <td>3</td>
                         </tr>
                         <tr>
                             <td>2.10*</td>
@@ -313,10 +313,10 @@
                         <tr>
                             <td>2.13*</td>
                             <td>make change with US coins</td>
-                            <td></td>
-                            <td></td>
-                            <td></td>
-                            <td></td>
+                            <td><a href="../python/functions.py">link</a></td>
+                            <td>1.5 hours</td>
+                            <td>4</td>
+                            <td>4</td>
                         </tr>
                         <tr>
                             <td>2.14*</td>
@@ -329,17 +329,41 @@
                         <tr>
                             <td>2.A</td>
                             <td>What did you like this week?</td>
-                            <td colspan="4"></td>
+                            <td colspan="4">
+                                <p>
+                                    Since I am realitively familiar with python, I spent 
+                                    more time researching interships than working on classwork.
+                                     I enjoyed the primes, prime_factorization, my_sort and 
+                                     encrpytion assignments, especially since they drew on 
+                                     topics that I had a backgroun in, so I could add my own 
+                                     little twist to them or take them a few steps further.
+                                </p>
+                            </td>
                         </tr>
                         <tr>
                             <td>2.B</td>
                             <td>What didn't you like this week?</td>
-                            <td colspan="4"></td>
+                            <td colspan="4">
+                                <p>
+                                    Personally, I wasn't a huge fan of the choose 
+                                    your own adventure assignments. It isn't that 
+                                    I don't like the idea, but for an assignment like 
+                                    that, I had a harder time coming up with the ideas 
+                                    for the "story" and spent less time working on code. 
+                                    I think it is a good assignment, but maybe it would be 
+                                    better to have it as an optional assignment.
+                                </p>
+                            </td>
                         </tr>
                         <tr>
                             <td>2.C</td>
                             <td>How can we improve the material from this week?</td>
-                            <td colspan="4"></td>
+                            <td colspan="4">
+                                <p>
+                                    My only recommendation would be to make the choose 
+                                    your own adventure assignement optional.
+                                </p>
+                            </td>
                         </tr>
                         <tr>
                             <td>2.D*</td>
