--- a/personal_website/assignments.html
+++ b/personal_website/assignments.html
@@ -375,11 +375,134 @@
             </div>
         </section>
 
+
         <section class="section" id="week3">
             <!-- Heading -->
             <div class="section-heading">
                 <h3 class="title is-2">Week 3</h3>
-                <h4 class="subtitle is-3"></h4>
+                <h4 class="subtitle is-3">Introducing Python</h4>
+            </div>
+            <div class="container">
+                <table class="table is-bordered is-striped is-narrow">
+                    <thead>
+                        <tr>
+                            <td>#</td>
+                            <td>Assignment</td>
+                            <td>Link</td>
+                            <td>Time</td>
+                            <td>Difficulty (1-5)</td>
+                            <td>Usefulness (1-5)</td>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>3.1</td>
+                            <td>Watch the week 3 tutorial videos</td>
+                            <td class="empty">N/A</td>
+                            <td>1.5 hours</td>
+                            <td>3</td>
+                            <td>4</td>
+                        </tr>
+                        <tr>
+                            <td>3.2</td>
+                            <td>Make a post with a dictionary of keys "handle" and "text"</td>
+                            <td class="empty"></td>
+                            <td>0.5 hours</td>
+                            <td>3</td>
+                            <td>3</td>
+                        </tr>
+                        <tr>
+                            <td>3.3</td>
+                            <td>Add data indicating which dogs have "liked" each others posts and 
+                                display the number of likes by each post</td>
+                            <td class="empty"></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                        </tr>
+                        <tr>
+                            <td>3.4*</td>
+                            <td> Add a timestamp to each post and show how long ago the post was made</td>
+                            <td class="empty"></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                        </tr>
+                        <tr>
+                            <td>3.5</td>
+                            <td>Allow dogs to "@mention" each other in their posts</td>
+                            <td class="empty"></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                        </tr>
+                        <tr>
+                            <td>3.6*</td>
+                            <td>Store the data in spreadsheets rather than in the python</td>
+                            <td class="empty"></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                        </tr>
+                        <tr>
+                            <td>3.7*</td>
+                            <td>Create a website version of problem 2.8 from last week, which 
+                                unscrambles english words.</td>
+                            <td class="empty"></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                        </tr>
+                        <tr>
+                            <td>3.8*</td>
+                            <td>Use Flask to create a basic choose your own adventure game</td>
+                            <td class="empty"></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                        </tr>
+                        <tr>
+                            <td>3.9*</td>
+                            <td>Build at least two views (pages) of the app of 
+                                your choice in Flask.</td>
+                            <td class="empty"></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                        </tr>
+                        <tr>
+                            <td>3.A</td>
+                            <td>What did you like this week?</td>
+                            <td colspan="4">
+                                <p>
+                                </p>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>3.B</td>
+                            <td>What didn't you like this week?</td>
+                            <td colspan="4">
+                                <p>
+
+                                </p>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>3.C</td>
+                            <td>How can we improve the material from this week?</td>
+                            <td colspan="4">
+                                <p>
+
+                                </p>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>3.D*</td>
+                            <td>Show us anything else you coded up this week!</td>
+                            <td colspan="4"></td>
+                        </tr>
+                    </tbody>
+                </table>
             </div>
         </section>
 
