--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     <div class="section-heading">
       <h3 class="title is-2">About Me</h3>
       <div class="container">
-            <p>I am a diligent <strong>Computer Science</strong> and <strong>Mathmematics</strong> student-athlete at the University of Puget Sound, 
+            <p>I am a diligent <strong>Computer Science</strong> and <strong>Mathematics</strong> student-athlete at the University of Puget Sound, 
             looking forward to a career in software development. I have almost <strong>2 years</strong> of well-rounded experience coding in 
             programming languages such as Java, JavaScript and HTML.
             
@@ -279,7 +279,7 @@
             <h3 class="title is-2">Resume</h3>
             <h4 class="subtitle is-5">More about my past</h4>
 
-            <form method="get" action="personal_website/Colin Monaghan Resume 11_26_2020.pdf">
+            <form method="get" action="personal_website/Monaghan, Colin Resume.pdf">
                 <button class="button is-link is-medium" type="submit">
                     <span class="icon">
                         <i class="fas fa-file-alt"></i>
