outlined index.html

--- a/index.html
+++ b/index.html
@@ -10,7 +10,14 @@
 </head>
 
 <body>
- 
+    <!-- Navigation bar -->
+    <!-- Header -->
+    <!-- About -->
+        <!-- Profile picture -->
+        <!-- Profile -->
+    <!-- Portfolio -->
+    <!-- Contact -->
+        <!-- Resume -->
 </body>
 
 </html>
