Created 'About' section. Added profile photo and about me paragraph

--- a/index.html
+++ b/index.html
@@ -13,8 +13,18 @@
     <!-- Navigation bar -->
     <!-- Header -->
     <!-- About -->
+    <section class="section" id="about">
         <!-- Profile picture -->
+        <img src="pictures/profile_pic.jpg">
         <!-- Profile -->
+        <p> I am a diligent <strong>Computer Science</strong> and <strong>Mathematics</strong> student-athlete at the University of Puget Sound, 
+            looking forward to a career in software development. I have almost <strong>3 years</strong> of well-rounded experience coding in 
+            programming languages such as Java, Python, and HTML.
+            
+            Looking for an opportunity to work and learn, as well as being involved in an organization that
+            believes in giving back to the community.
+        </p>
+    </section>
     <!-- Portfolio -->
     <!-- Contact -->
         <!-- Resume -->
