--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Colin Monaghan</title>
-  <link rel="stylesheet" href="default.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Colin Monaghan</title>
+    <link rel="stylesheet" href="default.css">
 </head>
 
 <body>
@@ -17,24 +17,32 @@
 
     <div class="page">
         <!-- About -->
-        <section class="section" id="about">
-            <!-- Profile picture -->
-            <img src="pictures/profile_pic.jpg">
-            <!-- Profile -->
-            <p> I am a diligent <strong>Computer Science</strong> and <strong>Mathematics</strong> student-athlete at the University of Puget Sound, 
-                looking forward to a career in software development. I have almost <strong>3 years</strong> of well-rounded experience coding in 
-                programming languages such as Java, Python, and HTML.
-                
-                Looking for an opportunity to work and learn, as well as being involved in an organization that
-                believes in giving back to the community.
-            </p>
+        <section class="info-grid-container" id="about">
+            <div class="info-grid">
+                <!-- Profile picture -->
+                <div>
+                    <img src="pictures/profile_pic.jpg">
+                </div>
+                <!-- Profile -->
+                <div>
+                    <p> I am a diligent <strong>Computer Science</strong> and <strong>Mathematics</strong>
+                        student-athlete at the University of Puget Sound,
+                        looking forward to a career in software development. I have almost <strong>3 years</strong> of
+                        well-rounded experience coding in
+                        programming languages such as Java, Python, and HTML.
+
+                        Looking for an opportunity to work and learn, as well as being involved in an organization that
+                        believes in giving back to the community.
+                    </p>
+                </div>
+            </div>
         </section>
         <!-- Portfolio -->
     </div>
 
     <footer class="footer">
         <!-- Contact -->
-            <!-- Resume -->
+        <!-- Resume -->
 
     </footer>
 </body>
