Added profile-photo rule to profile_pic image and added grid-items in the info-grid in index.html.

--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
         <section class="info-grid-container" id="about">
             <div class="info-grid">
                 <!-- Profile picture -->
-                <div>
-                    <img src="pictures/profile_pic.jpg">
+                <div class="info-grid-item">
+                    <img class="profile-photo" src="pictures/profile_pic.jpg">
                 </div>
                 <!-- Profile -->
-                <div>
+                <div class="info-grid-item">
                     <p> I am a diligent <strong>Computer Science</strong> and <strong>Mathematics</strong>
                         student-athlete at the University of Puget Sound,
                         looking forward to a career in software development. I have almost <strong>3 years</strong> of
