added description to the profile picture image

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <div class="info-grid">
                 <!-- Profile picture -->
                 <div class="info-grid-item flex-1">
-                    <img class="profile-photo" src="pictures/profile_pic.jpg">
+                    <img class="profile-photo" src="pictures/profile_pic.jpg" alt="Colin Monaghan">
                 </div>
                 <!-- Profile -->
                 <div class="info-grid-item flex-2">
