initialized rules for paragraph text blocks

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 </div>
                 <!-- Profile -->
                 <div class="info-grid-item flex-2">
-                    <p> I am a diligent <strong>Computer Science</strong> and <strong>Mathematics</strong>
+                    <p class="textblock"> I am a diligent <strong>Computer Science</strong> and <strong>Mathematics</strong>
                         student-athlete at the University of Puget Sound,
                         looking forward to a career in software development. I have almost <strong>3 years</strong> of
                         well-rounded experience coding in
